--- a/genindex.html
+++ b/genindex.html
@@ -44,11 +44,11 @@
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
- | <a href="#U"><strong>U</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -61,9 +61,15 @@
         <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_barplot">(polyclonal.polyclonal.Polyclonal method)</a>
 </li>
       </ul></li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_df">activity_wt_df (polyclonal.polyclonal.Polyclonal property)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.activity_wt_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_df">activity_wt_df (polyclonal.polyclonal.Polyclonal property)</a>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.activity_wt_df_replicates">activity_wt_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.alphabet">alphabet (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
@@ -162,11 +168,17 @@
         <li><a href="polyclonal.utils.html#module-polyclonal.utils">polyclonal.utils</a>
 </li>
       </ul></li>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_bootstrap_freq_dict">mut_bootstrap_freq_dict (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_corr">mut_escape_corr() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_replicates">mut_escape_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_heatmap">mut_escape_heatmap() (in module polyclonal.plot)</a>
 
@@ -183,15 +195,25 @@
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_site_summary_df">mut_escape_site_summary_df (polyclonal.polyclonal.Polyclonal property)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+</li>
+      </ul></li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df_replicates">mut_escape_site_summary_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       <li><a href="polyclonal.utils.html#polyclonal.utils.MutationParser">MutationParser (class in polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mutations">mutations (polyclonal.polyclonal.Polyclonal attribute)</a>
-
-      <ul>
-        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mutations">(polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
-      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.n_threads">n_threads (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -248,6 +270,8 @@
       </ul></li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection">PolyclonalCollection (class in polyclonal.polyclonal_collection)</a>
 </li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollectionFitError">PolyclonalCollectionFitError</a>
+</li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalFitError">PolyclonalFitError</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalHarmonizeError">PolyclonalHarmonizeError</a>
@@ -263,6 +287,10 @@
       <li><a href="polyclonal.pdb_utils.html#polyclonal.pdb_utils.reassign_b_factor">reassign_b_factor() (in module polyclonal.pdb_utils)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.root_polyclonal">root_polyclonal (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="S">S</h2>
@@ -272,15 +300,13 @@
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.site_level_model">site_level_model() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
-      <li><a href="polyclonal.utils.html#polyclonal.utils.site_level_variants">site_level_variants() (in module polyclonal.utils)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.utils.html#polyclonal.utils.site_level_variants">site_level_variants() (in module polyclonal.utils)</a>
+</li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.sites">sites (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.summarize_bootstraped_predictions">summarize_bootstraped_predictions() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
-</li>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.summarize_bootstrapped_params">summarize_bootstrapped_params() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -289,14 +315,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.plot.html#polyclonal.plot.TAB10_COLORS_NOGRAY">TAB10_COLORS_NOGRAY (in module polyclonal.plot)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="U">U</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.unsampled_mutations">unsampled_mutations (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
   </ul></td>
 </tr></table>
