--- a/genindex.html
+++ b/genindex.html
@@ -142,6 +142,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.icXX">icXX() (polyclonal.polyclonal.Polyclonal method)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.icXX">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.icXX_replicates">icXX_replicates() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -149,8 +157,6 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.make_predictions">make_predictions() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
-</li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.models">models (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
       <li>
@@ -178,10 +184,10 @@
         <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_replicates">mut_escape_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_heatmap">mut_escape_heatmap() (in module polyclonal.plot)</a>
 
       <ul>
@@ -200,17 +206,19 @@
       </ul></li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_site_summary_df">mut_escape_site_summary_df (polyclonal.polyclonal.Polyclonal property)</a>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_site_summary_df">mut_escape_site_summary_df() (polyclonal.polyclonal.Polyclonal method)</a>
 
       <ul>
-        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
       </ul></li>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df_replicates">mut_escape_site_summary_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_site_summary_df_replicates">mut_escape_site_summary_df_replicates() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
       <li><a href="polyclonal.utils.html#polyclonal.utils.MutationParser">MutationParser (class in polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mutations">mutations (polyclonal.polyclonal.Polyclonal attribute)</a>
+</li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mutations_times_seen">mutations_times_seen (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -283,6 +291,12 @@
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalHarmonizeError">PolyclonalHarmonizeError</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.prob_escape">prob_escape() (polyclonal.polyclonal.Polyclonal method)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.prob_escape">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      </ul></li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.prob_escape_replicates">prob_escape_replicates() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -311,8 +325,6 @@
       <li><a href="polyclonal.utils.html#polyclonal.utils.site_level_variants">site_level_variants() (in module polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.sites">sites (polyclonal.polyclonal.Polyclonal attribute)</a>
-</li>
-      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.summarize_bootstraped_predictions">summarize_bootstraped_predictions() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
   </ul></td>
 </tr></table>
