docs for version 0.1

--- a/_modules/polyclonal/polyclonal_collection.html
+++ b/_modules/polyclonal/polyclonal_collection.html
@@ -563,7 +563,7 @@
 <span class="sd">        ----------</span>
 <span class="sd">        mut_escape_site_summary_df_kwargs : dict</span>
 <span class="sd">            Keyword args for :meth:`PolyclonalCollection.mut_escape_site_summary_df`.</span>
-<span class="sd">            It is often useful to set `times_seen` to &gt;1.</span>
+<span class="sd">            It is often useful to set `min_times_seen` to &gt;1.</span>
 <span class="sd">        mut_escape_lineplot_kwargs : dict</span>
 <span class="sd">            Keyword args for :func:`polyclonal.plot.mut_escape_lineplot`</span>
 
