--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 0.1 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 0.2 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -492,6 +492,8 @@
     <span class="n">cell_size</span><span class="o">=</span><span class="mi">12</span><span class="p">,</span>
     <span class="n">zoom_bar_width</span><span class="o">=</span><span class="mi">500</span><span class="p">,</span>
     <span class="n">init_min_times_seen</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
+    <span class="n">epitope_label_suffix</span><span class="o">=</span><span class="s2">&quot; epitope&quot;</span><span class="p">,</span>
+    <span class="n">diverging_colors</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
 <span class="p">):</span>
     <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Heatmaps of the mutation escape values, :math:`\beta_{m,e}`.</span>
 
@@ -500,7 +502,7 @@
 <span class="sd">    mut_escape_df : pandas.DataFrame</span>
 <span class="sd">        Mutation-level escape in format of</span>
 <span class="sd">        :attr:`polyclonal.polyclonal.Polyclonal.mut_escape_df`.</span>
-<span class="sd">    alphabet : array-like or None</span>
+<span class="sd">    alphabet : array-like</span>
 <span class="sd">        Alphabet letters (e.g., amino acids) in order to plot them.</span>
 <span class="sd">    epitope_colors : dict</span>
 <span class="sd">        Maps each epitope name to its color.</span>
@@ -531,6 +533,12 @@
 <span class="sd">        Initial cutoff for minimum times a mutation must be seen slider. Slider</span>
 <span class="sd">        only shown if &#39;times_seen&#39; in `addtl_tooltip_stats`. Also used for calculating</span>
 <span class="sd">        the percent max cutoff values.</span>
+<span class="sd">    epitope_label_suffix : str</span>
+<span class="sd">        Suffix epitope labels with this.q</span>
+<span class="sd">    diverging_colors : bool</span>
+<span class="sd">        If `False`, colors in ``epitope_colors`` are assumed to be the upper color for</span>
+<span class="sd">        white-to-&lt;color&gt; scale. If `True`, they are instead diverging color schemes with</span>
+<span class="sd">        0 as white. Valid diverging schemes: https://vega.github.io/vega/docs/schemes/</span>
 
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
@@ -574,12 +582,13 @@
                 <span class="n">columns</span><span class="o">=</span><span class="s2">&quot;epitope&quot;</span><span class="p">,</span>
                 <span class="n">aggfunc</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="s2">&quot; &quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">x</span><span class="p">),</span>
             <span class="p">)</span>
-            <span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">e</span><span class="p">:</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}</span><span class="s2"> epitope&quot;</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">})</span>
+            <span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">e</span><span class="p">:</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}{</span><span class="n">epitope_label_suffix</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">})</span>
         <span class="p">)</span>
-        <span class="n">escape_tooltips</span> <span class="o">=</span> <span class="p">[</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}</span><span class="s2"> epitope&quot;</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">]</span>
+        <span class="n">escape_tooltips</span> <span class="o">=</span> <span class="p">[</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}{</span><span class="n">epitope_label_suffix</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">]</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">escape_tooltips</span> <span class="o">=</span> <span class="p">[</span>
-            <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">e</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.2f&quot;</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}</span><span class="s2"> epitope&quot;</span><span class="p">)</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span>
+            <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="n">e</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.2f&quot;</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">e</span><span class="si">}{</span><span class="n">epitope_label_suffix</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+            <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span>
         <span class="p">]</span>
 
     <span class="c1"># add mutation labels and wildtypes</span>
@@ -682,13 +691,18 @@
         <span class="n">df_percent_max</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
     <span class="k">if</span> <span class="n">floor_at_zero</span><span class="p">:</span>
         <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">:</span>
-            <span class="n">df_percent_max</span> <span class="o">=</span> <span class="n">df_percent_max</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="o">**</span><span class="p">{</span><span class="n">e</span><span class="p">:</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">e</span><span class="p">]</span><span class="o">.</span><span class="n">clip</span><span class="p">(</span><span class="n">lower</span><span class="o">=</span><span class="mi">1</span><span class="p">)})</span>
-    <span class="n">_max</span> <span class="o">=</span> <span class="n">df_percent_max</span><span class="p">[</span><span class="n">epitopes</span><span class="p">]</span><span class="o">.</span><span class="n">abs</span><span class="p">()</span><span class="o">.</span><span class="n">max</span><span class="p">()</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
+            <span class="n">df_percent_max</span> <span class="o">=</span> <span class="n">df_percent_max</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="o">**</span><span class="p">{</span><span class="n">e</span><span class="p">:</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">e</span><span class="p">]</span><span class="o">.</span><span class="n">clip</span><span class="p">(</span><span class="n">lower</span><span class="o">=</span><span class="mi">0</span><span class="p">)})</span>
+    <span class="n">_max</span> <span class="o">=</span> <span class="n">df_percent_max</span><span class="p">[</span><span class="n">epitopes</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">()</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
+    <span class="n">_min</span> <span class="o">=</span> <span class="n">df_percent_max</span><span class="p">[</span><span class="n">epitopes</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">()</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>
     <span class="n">df_percent_max</span> <span class="o">=</span> <span class="p">(</span>
-        <span class="n">df_percent_max</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">_epitope_max</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">epitopes</span><span class="p">]</span><span class="o">.</span><span class="n">abs</span><span class="p">()</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">))</span>
+        <span class="n">df_percent_max</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">_epitope_max</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">epitopes</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">))</span>
         <span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="n">as_index</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
         <span class="o">.</span><span class="n">aggregate</span><span class="p">(</span><span class="n">_site_max</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">NamedAgg</span><span class="p">(</span><span class="s2">&quot;_epitope_max&quot;</span><span class="p">,</span> <span class="s2">&quot;max&quot;</span><span class="p">))</span>
-        <span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">percent_max</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="mi">100</span> <span class="o">*</span> <span class="n">x</span><span class="p">[</span><span class="s2">&quot;_site_max&quot;</span><span class="p">]</span> <span class="o">/</span> <span class="n">_max</span><span class="p">)</span>
+        <span class="o">.</span><span class="n">assign</span><span class="p">(</span>
+            <span class="n">percent_max</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="p">(</span><span class="mi">100</span> <span class="o">*</span> <span class="p">(</span><span class="n">x</span><span class="p">[</span><span class="s2">&quot;_site_max&quot;</span><span class="p">]</span> <span class="o">-</span> <span class="n">_min</span><span class="p">)</span> <span class="o">/</span> <span class="p">(</span><span class="n">_max</span> <span class="o">-</span> <span class="n">_min</span><span class="p">))</span><span class="o">.</span><span class="n">clip</span><span class="p">(</span>
+                <span class="n">lower</span><span class="o">=</span><span class="mi">0</span>
+            <span class="p">)</span>
+        <span class="p">)</span>
         <span class="o">.</span><span class="n">drop</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="s2">&quot;_site_max&quot;</span><span class="p">)</span>
     <span class="p">)</span>
     <span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">merge</span><span class="p">(</span><span class="n">df_percent_max</span><span class="p">,</span> <span class="n">on</span><span class="o">=</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="n">how</span><span class="o">=</span><span class="s2">&quot;left&quot;</span><span class="p">,</span> <span class="n">validate</span><span class="o">=</span><span class="s2">&quot;many_to_one&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span>
@@ -732,11 +746,16 @@
             <span class="n">color</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Color</span><span class="p">(</span>
                 <span class="n">epitope</span><span class="p">,</span>
                 <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;quantitative&quot;</span><span class="p">,</span>
-                <span class="n">scale</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Scale</span><span class="p">(</span>
-                    <span class="nb">range</span><span class="o">=</span><span class="n">color_gradient_hex</span><span class="p">(</span><span class="s2">&quot;white&quot;</span><span class="p">,</span> <span class="n">epitope_colors</span><span class="p">[</span><span class="n">epitope</span><span class="p">],</span> <span class="mi">10</span><span class="p">),</span>
-                    <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;linear&quot;</span><span class="p">,</span>
-                    <span class="n">domain</span><span class="o">=</span><span class="p">(</span><span class="n">escape_min</span><span class="p">,</span> <span class="n">escape_max</span><span class="p">),</span>
-                    <span class="n">clamp</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                <span class="c1"># diverging color scales: https://stackoverflow.com/a/70296527</span>
+                <span class="n">scale</span><span class="o">=</span><span class="p">(</span>
+                    <span class="n">alt</span><span class="o">.</span><span class="n">Scale</span><span class="p">(</span><span class="n">domainMid</span><span class="o">=</span><span class="mi">0</span><span class="p">,</span> <span class="n">scheme</span><span class="o">=</span><span class="n">epitope_colors</span><span class="p">[</span><span class="n">epitope</span><span class="p">])</span>
+                    <span class="k">if</span> <span class="n">diverging_colors</span>
+                    <span class="k">else</span> <span class="n">alt</span><span class="o">.</span><span class="n">Scale</span><span class="p">(</span>
+                        <span class="nb">range</span><span class="o">=</span><span class="n">color_gradient_hex</span><span class="p">(</span><span class="s2">&quot;white&quot;</span><span class="p">,</span> <span class="n">epitope_colors</span><span class="p">[</span><span class="n">epitope</span><span class="p">],</span> <span class="mi">20</span><span class="p">),</span>
+                        <span class="nb">type</span><span class="o">=</span><span class="s2">&quot;linear&quot;</span><span class="p">,</span>
+                        <span class="n">domain</span><span class="o">=</span><span class="p">(</span><span class="n">escape_min</span><span class="p">,</span> <span class="n">escape_max</span><span class="p">),</span>
+                        <span class="n">clamp</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+                    <span class="p">)</span>
                 <span class="p">),</span>
                 <span class="n">legend</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Legend</span><span class="p">(</span>
                     <span class="n">orient</span><span class="o">=</span><span class="s2">&quot;left&quot;</span><span class="p">,</span>
@@ -761,7 +780,8 @@
             <span class="p">)</span>
             <span class="o">.</span><span class="n">properties</span><span class="p">(</span>
                 <span class="n">title</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">TitleParams</span><span class="p">(</span>
-                    <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">epitope</span><span class="si">}</span><span class="s2"> epitope&quot;</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">epitope_colors</span><span class="p">[</span><span class="n">epitope</span><span class="p">]</span>
+                    <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">epitope</span><span class="si">}{</span><span class="n">epitope_label_suffix</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
+                    <span class="n">color</span><span class="o">=</span><span class="s2">&quot;black&quot;</span> <span class="k">if</span> <span class="n">diverging_colors</span> <span class="k">else</span> <span class="n">epitope_colors</span><span class="p">[</span><span class="n">epitope</span><span class="p">],</span>
                 <span class="p">),</span>
                 <span class="n">width</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;step&quot;</span><span class="p">:</span> <span class="n">cell_size</span><span class="p">},</span>
                 <span class="n">height</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;step&quot;</span><span class="p">:</span> <span class="n">cell_size</span><span class="p">},</span>
