--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 1.0 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 1.2 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -351,6 +351,7 @@
                 <span class="n">index</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;metric&quot;</span><span class="p">],</span>
                 <span class="n">columns</span><span class="o">=</span><span class="s2">&quot;epitope&quot;</span><span class="p">,</span>
                 <span class="n">values</span><span class="o">=</span><span class="s2">&quot;escape_std&quot;</span><span class="p">,</span>
+                <span class="n">dropna</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>  <span class="c1"># otherwise an error if just one model</span>
             <span class="p">)</span>
             <span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
             <span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">epitope</span><span class="p">:</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">epitope</span><span class="si">}</span><span class="s2"> error&quot;</span> <span class="k">for</span> <span class="n">epitope</span> <span class="ow">in</span> <span class="n">epitopes</span><span class="p">})</span>
