--- a/_modules/polyclonal/polyclonal_collection.html
+++ b/_modules/polyclonal/polyclonal_collection.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal_collection &#8212; polyclonal 1.1 documentation</title>
+    <title>polyclonal.polyclonal_collection &#8212; polyclonal 1.2 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -44,7 +44,7 @@
 <span class="sd">:class:`PolyclonalCollection` is a base class for the following specific use-case</span>
 <span class="sd">classes:</span>
 
-<span class="sd"> - :class:`PolyclonalAverage` for bootstrapping a model.</span>
+<span class="sd"> - :class:`PolyclonalAverage` for averaging several Polyclonal objects.</span>
 
 <span class="sd"> - :class:`PolyclonalBootstrap` for bootstrapping a model.</span>
 
