--- a/_modules/polyclonal/utils.html
+++ b/_modules/polyclonal/utils.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.utils &#8212; polyclonal 1.0 documentation</title>
+    <title>polyclonal.utils &#8212; polyclonal 1.2 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -87,6 +87,9 @@
 <span class="sd">    &gt;&gt;&gt; mutparser_letter_suffix.parse_mut(&#39;E214aA&#39;)</span>
 <span class="sd">    (&#39;E&#39;, &#39;214a&#39;, &#39;A&#39;)</span>
 
+<span class="sd">    &gt;&gt;&gt; mutparser.parse_mut(&quot;A-1G&quot;)</span>
+<span class="sd">    (&#39;A&#39;, -1, &#39;G&#39;)</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">alphabet</span><span class="p">,</span> <span class="n">letter_suffixed_sites</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
@@ -104,10 +107,10 @@
         <span class="n">chars</span> <span class="o">=</span> <span class="s2">&quot;|&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">chars</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">letter_suffixed_sites</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_sites_as_int</span> <span class="o">=</span> <span class="kc">False</span>
-            <span class="n">site_regex</span> <span class="o">=</span> <span class="sa">r</span><span class="s2">&quot;(?P&lt;site&gt;\d+[a-z]?)&quot;</span>
+            <span class="n">site_regex</span> <span class="o">=</span> <span class="sa">r</span><span class="s2">&quot;(?P&lt;site&gt;\-?\d+[a-z]?)&quot;</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_sites_as_int</span> <span class="o">=</span> <span class="kc">True</span>
-            <span class="n">site_regex</span> <span class="o">=</span> <span class="sa">r</span><span class="s2">&quot;(?P&lt;site&gt;\d+)&quot;</span>
+            <span class="n">site_regex</span> <span class="o">=</span> <span class="sa">r</span><span class="s2">&quot;(?P&lt;site&gt;\-?\d+)&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_mutation_regex</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">compile</span><span class="p">(</span>
             <span class="sa">rf</span><span class="s2">&quot;(?P&lt;wt&gt;</span><span class="si">{</span><span class="n">chars</span><span class="si">}</span><span class="s2">)&quot;</span> <span class="o">+</span> <span class="n">site_regex</span> <span class="o">+</span> <span class="sa">rf</span><span class="s2">&quot;(?P&lt;mut&gt;</span><span class="si">{</span><span class="n">chars</span><span class="si">}</span><span class="s2">)&quot;</span>
         <span class="p">)</span>
