--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 1.2 documentation</title>
+    <title>Index &#8212; polyclonal 2.0 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
@@ -43,6 +43,7 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -119,8 +120,12 @@
 </li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.default_avg_to_plot">default_avg_to_plot (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.DEFAULT_NEGATIVE_COLOR">DEFAULT_NEGATIVE_COLOR (in module polyclonal.plot)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.DEFAULT_POSITIVE_COLORS">DEFAULT_POSITIVE_COLORS (in module polyclonal.plot)</a>
+</li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.DEFAULT_SCIPY_MINIMIZE_KWARGS">DEFAULT_SCIPY_MINIMIZE_KWARGS (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.descriptor_names">descriptor_names (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
@@ -186,6 +191,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.lineplot_and_heatmap">lineplot_and_heatmap() (in module polyclonal.plot)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -218,6 +231,8 @@
         <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_corr">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_corr_heatmap">mut_escape_corr_heatmap() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
@@ -226,28 +241,16 @@
         <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df">(polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_replicates">mut_escape_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
-      <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_heatmap">mut_escape_heatmap() (in module polyclonal.plot)</a>
-
-      <ul>
-        <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_heatmap">(polyclonal.polyclonal.Polyclonal method)</a>
-</li>
-        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_heatmap">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
-</li>
-      </ul></li>
-      <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_lineplot">mut_escape_lineplot() (in module polyclonal.plot)</a>
-
-      <ul>
-        <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_lineplot">(polyclonal.polyclonal.Polyclonal method)</a>
-</li>
-        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_lineplot">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
-</li>
-      </ul></li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_plot">mut_escape_plot() (polyclonal.polyclonal.Polyclonal method)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_plot">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      </ul></li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_site_summary_df">mut_escape_site_summary_df() (polyclonal.polyclonal.Polyclonal method)</a>
 
       <ul>
