--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 2.0 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 2.1 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -320,6 +320,7 @@
     <span class="n">heatmap_max_at_least</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">heatmap_min_at_least</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">site_zoom_bar_color_scheme</span><span class="o">=</span><span class="s2">&quot;set3&quot;</span><span class="p">,</span>
+    <span class="n">slider_binding_range_kwargs</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
 
@@ -382,6 +383,10 @@
 <span class="sd">    site_zoom_bar_color_scheme : str</span>
 <span class="sd">        If using `site_zoom_bar_color_col`, the</span>
 <span class="sd">        `Vega color scheme &lt;https://vega.github.io/vega/docs/schemes&gt;`_ to use.</span>
+<span class="sd">    slider_binding_range_kwargs : dict</span>
+<span class="sd">        Keyed by keys in ``addtl_slider_stats``, with values being dicts</span>
+<span class="sd">        giving keyword arguments passed to ``altair.binding_range`` (eg,</span>
+<span class="sd">        &#39;min&#39;, &#39;max&#39;, &#39;step&#39;, etc.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">basic_req_cols</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;wildtype&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">stat_col</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">addtl_tooltip_stats</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -460,29 +465,32 @@
         <span class="n">value</span><span class="o">=</span><span class="p">[{</span><span class="s2">&quot;floor&quot;</span><span class="p">:</span> <span class="mi">0</span> <span class="k">if</span> <span class="n">init_floor_at_zero</span> <span class="k">else</span> <span class="n">min_stat</span><span class="p">}],</span>
     <span class="p">)</span>
 
-    <span class="c1"># create sliders for site statistic value and any additional sliders</span>
-    <span class="n">site_statistics</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;sum&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">,</span> <span class="s2">&quot;max&quot;</span><span class="p">,</span> <span class="s2">&quot;min&quot;</span><span class="p">]</span>
-    <span class="n">sliders</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="s2">&quot;_stat_site_max&quot;</span><span class="p">:</span> <span class="n">alt</span><span class="o">.</span><span class="n">selection_point</span><span class="p">(</span>
-            <span class="n">fields</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">],</span>
-            <span class="n">value</span><span class="o">=</span><span class="p">[{</span><span class="s2">&quot;cutoff&quot;</span><span class="p">:</span> <span class="n">min_stat</span><span class="p">}],</span>
-            <span class="n">bind</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">binding_range</span><span class="p">(</span>
-                <span class="n">name</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;minimum max of </span><span class="si">{</span><span class="n">stat_col</span><span class="si">}</span><span class="s2"> at site&quot;</span><span class="p">,</span>
-                <span class="nb">min</span><span class="o">=</span><span class="n">min_stat</span><span class="p">,</span>
-                <span class="nb">max</span><span class="o">=</span><span class="n">max_stat</span><span class="p">,</span>
-            <span class="p">),</span>
-        <span class="p">),</span>
-    <span class="p">}</span>
+    <span class="c1"># create sliders for max of statistic at site and any additional sliders</span>
+    <span class="n">sliders</span> <span class="o">=</span> <span class="p">{}</span>
+    <span class="k">if</span> <span class="n">slider_binding_range_kwargs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+        <span class="n">slider_binding_range_kwargs</span> <span class="o">=</span> <span class="p">{}</span>
     <span class="k">for</span> <span class="n">slider_stat</span><span class="p">,</span> <span class="n">init_slider_stat</span> <span class="ow">in</span> <span class="n">addtl_slider_stats</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="n">binding_range_kwargs</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s2">&quot;min&quot;</span><span class="p">:</span> <span class="n">data_df</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">(),</span>
+            <span class="s2">&quot;max&quot;</span><span class="p">:</span> <span class="n">data_df</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">(),</span>
+            <span class="s2">&quot;name&quot;</span><span class="p">:</span> <span class="sa">f</span><span class="s2">&quot;minimum </span><span class="si">{</span><span class="n">slider_stat</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
+        <span class="p">}</span>
+        <span class="k">if</span> <span class="n">slider_stat</span> <span class="ow">in</span> <span class="n">slider_binding_range_kwargs</span><span class="p">:</span>
+            <span class="n">binding_range_kwargs</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">slider_binding_range_kwargs</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">])</span>
         <span class="n">sliders</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">=</span> <span class="n">alt</span><span class="o">.</span><span class="n">selection_point</span><span class="p">(</span>
             <span class="n">fields</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">],</span>
             <span class="n">value</span><span class="o">=</span><span class="p">[{</span><span class="s2">&quot;cutoff&quot;</span><span class="p">:</span> <span class="n">init_slider_stat</span><span class="p">}],</span>
-            <span class="n">bind</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">binding_range</span><span class="p">(</span>
-                <span class="nb">min</span><span class="o">=</span><span class="n">data_df</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">(),</span>
-                <span class="nb">max</span><span class="o">=</span><span class="n">data_df</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">(),</span>
-                <span class="n">name</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;minimum </span><span class="si">{</span><span class="n">slider_stat</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span>
-            <span class="p">),</span>
+            <span class="n">bind</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">binding_range</span><span class="p">(</span><span class="o">**</span><span class="n">binding_range_kwargs</span><span class="p">),</span>
         <span class="p">)</span>
+    <span class="n">sliders</span><span class="p">[</span><span class="s2">&quot;_stat_site_max&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">alt</span><span class="o">.</span><span class="n">selection_point</span><span class="p">(</span>
+        <span class="n">fields</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">],</span>
+        <span class="n">value</span><span class="o">=</span><span class="p">[{</span><span class="s2">&quot;cutoff&quot;</span><span class="p">:</span> <span class="n">min_stat</span><span class="p">}],</span>
+        <span class="n">bind</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">binding_range</span><span class="p">(</span>
+            <span class="n">name</span><span class="o">=</span><span class="sa">f</span><span class="s2">&quot;minimum max of </span><span class="si">{</span><span class="n">stat_col</span><span class="si">}</span><span class="s2"> at site&quot;</span><span class="p">,</span>
+            <span class="nb">min</span><span class="o">=</span><span class="n">min_stat</span><span class="p">,</span>
+            <span class="nb">max</span><span class="o">=</span><span class="n">max_stat</span><span class="p">,</span>
+        <span class="p">),</span>
+    <span class="p">)</span>
 
     <span class="c1"># whether to show line on line plot</span>
     <span class="n">line_selection</span> <span class="o">=</span> <span class="n">alt</span><span class="o">.</span><span class="n">selection_point</span><span class="p">(</span>
@@ -570,10 +578,16 @@
     <span class="c1"># Transforms on base chart. The &quot;_stat&quot; columns is floor transformed stat_col.</span>
     <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span>
         <span class="n">_stat</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">stat_col</span><span class="p">],</span> <span class="n">floor_at_zero</span><span class="p">[</span><span class="s2">&quot;floor&quot;</span><span class="p">]),</span>
-    <span class="p">)</span><span class="o">.</span><span class="n">transform_joinaggregate</span><span class="p">(</span><span class="n">_stat_site_max</span><span class="o">=</span><span class="s2">&quot;max(_stat)&quot;</span><span class="p">,</span> <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">])</span>
+    <span class="p">)</span>
 
     <span class="c1"># Filter data using slider stat</span>
+    <span class="k">assert</span> <span class="nb">list</span><span class="p">(</span><span class="n">sliders</span><span class="p">)[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span>  <span class="c1"># last for right operation order</span>
     <span class="k">for</span> <span class="n">slider_stat</span><span class="p">,</span> <span class="n">slider</span> <span class="ow">in</span> <span class="n">sliders</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="k">if</span> <span class="n">slider_stat</span> <span class="o">==</span> <span class="s2">&quot;_stat_site_max&quot;</span><span class="p">:</span>
+            <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_joinaggregate</span><span class="p">(</span>
+                <span class="n">_stat_site_max</span><span class="o">=</span><span class="s2">&quot;max(_stat)&quot;</span><span class="p">,</span>
+                <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">],</span>
+            <span class="p">)</span>
         <span class="n">base_chart</span> <span class="o">=</span> <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
             <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">slider</span><span class="p">[</span><span class="s2">&quot;cutoff&quot;</span><span class="p">]</span> <span class="o">-</span> <span class="mf">1e-6</span><span class="p">)</span>  <span class="c1"># add rounding tol</span>
             <span class="o">|</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">isNumber</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">])</span>  <span class="c1"># do not filter null values</span>
@@ -592,6 +606,7 @@
     <span class="p">)</span>
 
     <span class="c1"># make the site chart</span>
+    <span class="n">site_statistics</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;sum&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">,</span> <span class="s2">&quot;max&quot;</span><span class="p">,</span> <span class="s2">&quot;min&quot;</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">init_site_statistic</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">site_statistics</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;invalid </span><span class="si">{</span><span class="n">init_site_statistic</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="k">if</span> <span class="nb">set</span><span class="p">(</span><span class="n">site_statistics</span><span class="p">)</span><span class="o">.</span><span class="n">intersection</span><span class="p">(</span><span class="n">req_cols</span><span class="p">):</span>
